updating development repository

--- a/src/Custom/CMSBundle/Resources/views/Default/index.html.twig
+++ b/src/Custom/CMSBundle/Resources/views/Default/index.html.twig
@@ -26,8 +26,7 @@
                         <p>
                             <i class="glyphicon glyphicon-user"></i>&nbsp;John
                             &nbsp;<i class="glyphicon glyphicon-calendar"></i>&nbsp;Sept 16th, 2012
-                            &nbsp;<i class="glyphicon glyphicon-tags"></i>&nbsp;<a href="#"><span class="label label-default">Snipp</span></a> 
-                            <a href="#"><span class="label label-default">Bootstrap</span></a>
+                            &nbsp;<i class="glyphicon glyphicon-tags"></i>&nbsp; <a href="#"><span class="label label-default">{{ page.category.name | capitalize }}</span></a> 
                         </p>
                     </div>
                 </div>
