--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,9 +12,65 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        <div class="modal fade" id="loginmodal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Login</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="{{ path('login_check') }}" method="post">
+                            <div class="form-group">
+                                <label for="username">Username:</label>
+                                <input type="text" class="form-control" id="username" name="_username">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password:</label>
+                                <input type="password" class="form-control" id="password" name="_password">
+                            </div>
+                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-log-in"></span> Login</button>
+                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-lock"></span> Forget?</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="modal fade" id="registermodal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Sign Up</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form action="" method="post">
+                            <div class="form-group">
+                                <label for="username">Username:</label>
+                                <input type="text" class="form-control" id="username" name="_username">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password:</label>
+                                <input type="password" class="form-control" id="password" name="_password">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Repeat Password:</label>
+                                <input type="password" class="form-control" id="password" name="_password">
+                            </div>
+                            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Register</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>                        
         <div id="container" class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-md-12">
                     <nav class="navbar navbar-inverse">
                         <div class="container-fluid">
                             <div class="navbar-header">
@@ -35,8 +91,8 @@
                                 {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_USER') %}
                                     <li><a href="{{ path('logout') }}"> <span class="glyphicon glyphicon-log-in"></span> Logout</a></li> 
                                     {% else %}
-                                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                                    <li><a href="{{ path('login') }}"> <span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                                    <li><a href="" data-toggle="modal" data-target="#registermodal"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                                    <li><a href="" data-toggle="modal" data-target="#loginmodal"> <span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                                     {% endif %}
                             </ul>
                         </div>
@@ -46,7 +102,8 @@
 
         {% block body %}{% endblock %}
         {% block javascripts %}
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
         {% endblock %}
     </div>
 </body>
