Updating development repository with CKEDITOR basic implementation

--- a/src/Custom/CMSBundle/Resources/views/page/new.html.twig
+++ b/src/Custom/CMSBundle/Resources/views/page/new.html.twig
@@ -18,7 +18,7 @@
             <div class="form-group clearfix">
                 {{ form_label(form.content, 'Content', {'label_attr': {'class': 'control-label col-xs-2' }}) }}
                 <div class="col-xs-10">
-                    {{ form_widget(form.content, {'attr': {'class': 'form-control', 'rows': '10', 'cols': '100'}})  }}
+                    {{ form_widget(form.content, {'attr': {'class': 'form-control page-content', 'rows': '10', 'cols': '100'}})  }}
                 </div>
             </div>
             <div class="form-group clearfix">
