--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('styles/jquery.dataTables.css') }}" type="text/css"/>
+            <script src="http://cdn.ckeditor.com/4.6.0/basic/ckeditor.js"></script>
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -104,6 +105,21 @@
         {% block javascripts %}
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+            <script type="text/javascript">
+                (function ($) {
+                    $(document).ready(function () {
+                        CKEDITOR.config.startupFocus = true;
+                        CKEDITOR.config.width = '100%';
+                        var elements = CKEDITOR.document.find('.page-content'),
+                                i = 0,
+                                element;
+
+                        while ((element = elements.getItem(i++))) {
+                            CKEDITOR.inline(element);
+                        }
+                    });
+                }(jQuery));
+            </script>
         {% endblock %}
     </div>
 </body>
