--- a/src/Custom/CMSBundle/Resources/views/category/edit.html.twig
+++ b/src/Custom/CMSBundle/Resources/views/category/edit.html.twig
@@ -1,21 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Category edit</h1>
+    <div class="page-header">
+        <h1>Edit Category</h1>
+    </div>
 
-    {{ form_start(edit_form) }}
-    {{ form_widget(edit_form) }}
-    <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+    {# {{ form_start(edit_form) }}
+     {{ form_widget(edit_form) }}
+     <input type="submit" value="Edit" />
+     {{ form_end(edit_form) }}#}
 
-    <ul>
-        <li>
-            <a href="{{ path('cms_category_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            {{ form_start(edit_form) }}
+
+            <div class="form-group clearfix">
+                {{ form_label(edit_form.name, 'Category Name', {'label_attr': {'class': 'control-label col-xs-2'}}) }}
+                <div class="col-xs-6">
+                    {{ form_widget(edit_form.name, {'attr': {'class': 'form-control'}})  }}
+                </div>
+            </div><br>
+
+            <div class="form-group">
+                <div class="col-xs-offset-2 col-xs-10">
+                    <button type="submit" class="btn btn-primary" style="float:left;">Update</button>
+                    {{ form_end(edit_form) }}
+                    {{ form_start(delete_form) }}
+                    {#                    <input type="submit" lass="btn btn-danger" value="Delete">#}
+                    <input type="submit" class="btn btn-danger" style="float:left;" value="Delete"> 
+                    {{ form_end(delete_form) }}
+
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
