--- a/src/Custom/CMSBundle/Resources/views/page/edit.html.twig
+++ b/src/Custom/CMSBundle/Resources/views/page/edit.html.twig
@@ -3,12 +3,11 @@
 {% block body %}
     <div class="page-header">
         <a href="{{ path('cms_page_index') }}" class="btn btn-sm btn-primary pull-right"><span class="glyphicon glyphicon-circle-arrow-left"></span> Back</a>   
-        <h2>Edit Page</h2>
+        <h2>Edit Page: {{ page.title  }} </h2>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
             {{ form_start(edit_form) }}
-
             <div class="form-group clearfix">
                 {{ form_label(edit_form.title, 'Title', {'label_attr': {'class': 'control-label col-xs-2'}}) }}
                 <div class="col-xs-10">
@@ -18,7 +17,7 @@
             <div class="form-group clearfix">
                 {{ form_label(edit_form.content, 'Content', {'label_attr': {'class': 'control-label col-xs-2' }}) }}
                 <div class="col-xs-10">
-                    {{ form_widget(edit_form.content, {'attr': {'class': 'form-control', 'rows': '10', 'cols': '100'}})  }}
+                    {{ form_widget(edit_form.content, {'attr': {'class': 'form-control page-content', 'rows': '10', 'cols': '100'}})  }}
                 </div>
             </div>
             <div class="form-group clearfix">
@@ -28,20 +27,17 @@
                 </div>
             </div><br>
 
-            <div class="form-group pull-right">
+            <div class="form-group">
                 <div class="col-xs-offset-2 col-xs-10">
                     <button type="submit" class="btn btn-primary">Update</button>
+                    {{ form_end(edit_form) }}
+                    {{ form_start(delete_form) }}
+                    <input type="submit" value="Delete" class="btn btn-danger">
+                    {{ form_end(delete_form) }}
                 </div>
+
             </div>
-            {{ form_end(edit_form) }}
+
         </div>
     </div>
-
-    <ul>
-        <li>
-            {{ form_start(delete_form) }}
-            <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
 {% endblock %}
